fix: The touch start event is not prevented on iOS in some cases

--- a/src/view/chart/chart.css
+++ b/src/view/chart/chart.css
@@ -47,6 +47,18 @@
   border-radius: 5px;
 }
 
+/*
+  iOS Safari doesn't prevent a touchstart event if it was emitted near an edge of the target.
+  This block increases the target area.
+*/
+.touchCatcher {
+  position: absolute;
+  top: 0;
+  right: -12px;
+  bottom: 0;
+  left: -12px;
+}
+
 .selectorOutsideBox {
   position: absolute;
   top: 0;
